[gd_scene load_steps=5 format=3 uid="uid://uypsiv1yjyky"]

[ext_resource type="Script" uid="uid://x2ne0k6em7fh" path="res://scripts/background.gd" id="1_7xgxv"]
[ext_resource type="Theme" uid="uid://b72vss7i0olh8" path="res://graphics/themes/CloseButton.tres" id="1_ushb7"]
[ext_resource type="Theme" uid="uid://dwse32igttkax" path="res://graphics/themes/SettingsButton.tres" id="2_7xgxv"]
[ext_resource type="Theme" uid="uid://bxj6d3oq306wd" path="res://graphics/themes/InfoButton.tres" id="3_nfl07"]

[node name="Background" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_7xgxv")

[node name="Background" type="Node2D" parent="."]
z_index = -1

[node name="TopBackground" type="ColorRect" parent="Background"]
z_index = -1
offset_right = 1280.0
offset_bottom = 60.0
color = Color(0.11372549, 0.38039216, 0.627451, 1)

[node name="BottomBackground" type="ColorRect" parent="Background"]
z_index = -1
offset_top = 60.0
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 1
color = Color(0.9411765, 0.9411765, 0.9411765, 1)

[node name="CloseButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1223.0
offset_top = 2.0
offset_right = 1278.0
offset_bottom = 57.0
theme = ExtResource("1_ushb7")

[node name="SettingsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1152.0
offset_top = 5.0
offset_right = 1202.0
offset_bottom = 55.0
theme = ExtResource("2_7xgxv")

[node name="SettingsMenu" type="Panel" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -14.0
offset_top = 6.0
offset_right = 19.0
offset_bottom = 35.0

[node name="CloseSettingsButton" type="Button" parent="SettingsMenu"]
z_index = 1
layout_mode = 0
offset_left = 1169.0
offset_top = 76.0
offset_right = 1214.0
offset_bottom = 121.0
theme = ExtResource("1_ushb7")

[node name="Top" type="ColorRect" parent="SettingsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 883.5
offset_top = 61.5
offset_right = 1198.5
offset_bottom = 106.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.113725, 0.380392, 0.627451, 1)

[node name="Bottom" type="ColorRect" parent="SettingsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 883.5
offset_top = 106.5
offset_right = 1198.5
offset_bottom = 518.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SettingsLabel" type="Label" parent="SettingsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 966.5
offset_top = 68.5
offset_right = 1041.5
offset_bottom = 83.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0.470588, 0.509804, 0.54902, 1)
text = "SETTINGS"

[node name="InfoButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1072.0
offset_top = -4.0
offset_right = 1139.0
offset_bottom = 63.0
theme = ExtResource("3_nfl07")
expand_icon = true

[node name="InfoMenu" type="Panel" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -91.0
offset_right = -51.0
offset_bottom = 40.0

[node name="CloseInfoButton" type="Button" parent="InfoMenu"]
z_index = 5
layout_mode = 0
offset_left = 1174.0
offset_top = 82.0
offset_right = 1219.0
offset_bottom = 127.0
theme = ExtResource("1_ushb7")

[node name="Top" type="ColorRect" parent="InfoMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 883.5
offset_top = 61.5
offset_right = 1198.5
offset_bottom = 106.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.113725, 0.380392, 0.627451, 1)

[node name="Bottom" type="ColorRect" parent="InfoMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 883.5
offset_top = 106.5
offset_right = 1198.5
offset_bottom = 518.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="InfoLabel" type="Label" parent="InfoMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1007.0
offset_top = 69.0
offset_right = 1047.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0.470588, 0.509804, 0.54902, 1)
text = "INFO"

[node name="BlurOverlay" type="ColorRect" parent="."]
visible = false
z_index = -1
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 1
color = Color(0, 0, 0, 0.392157)

[node name="BlueOverlay" type="ColorRect" parent="."]
z_index = -1
layout_mode = 0
offset_top = 60.0
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 1
color = Color(0.11372549, 0.38039216, 0.627451, 0.29411766)

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 997.0
offset_top = -2.0
offset_right = 1076.0
offset_bottom = 65.0
theme = ExtResource("3_nfl07")
text = "go back"
expand_icon = true

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="SettingsMenu/CloseSettingsButton" to="." method="_on_close_settings_button_pressed"]
[connection signal="pressed" from="InfoButton" to="." method="_on_info_button_pressed"]
[connection signal="pressed" from="InfoMenu/CloseInfoButton" to="." method="_on_close_info_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
